<resources>
    <string name="ico_name">GeMarco</string>
    <string name="app_name">GeneracionMarco</string>
    <string name="app_version">Versión 0.1.0</string>
    <string name="title_activity_encuesta">EncuestaActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="content_logo_inei">logo inei</string>
    <string name="nombre_encuesta">GENERACION MARCO</string>
    <string name="login_texto_usuario">USUARIO</string>
    <string name="login_texto_password">CONTRASEÑA</string>
    <string name="login_texto_boton">INGRESAR</string>
    <string name="nombre_modulo_caratula">Carátula</string>
    <string name="nombre_modulo_entrevista_supervision">Entrevistas y Supervisión</string>
    <string name="nombre_modulo_funcionarios_encuesta">Funcionarios de la Encuesta</string>
    <string name="texto_especifique">Especifique</string>


    <!--Strings asociados al marco-->
    <string name="marco_mes">MES</string>
    <string name="marco_anio">ANIO</string>
    <string name="marco_periodo">PERIODO</string>
    <string name="marco_conglomerado">CONGLOMERADO</string>
</resources>
