<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@color/colorPrimary">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryTransparente">

        <LinearLayout
            android:layout_width="480dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="@dimen/margen_small"
                android:text="@string/nombre_encuesta"
                android:textColor="@color/icons"
                android:textSize="@dimen/texto_medium"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/icons"
                android:orientation="vertical"
                android:padding="@dimen/margen_medium">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:scaleType="fitCenter" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margen_small"
                    android:theme="@style/TextInput">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_textInput_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/login_texto_usuario" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margen_small"
                    android:theme="@style/TextInput"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_textInput_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/login_texto_password" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login_button_ingresar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen_small"
                    android:text="@string/login_texto_boton"
                    android:theme="@style/RaisedButtonDark" />
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/icons"
                    android:gravity="center"
                    android:padding="@dimen/margen_small"
                    android:text="@string/app_version"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/texto_medium"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>